# pandas-workshop

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  environment.yml  postBuild  pyproject.toml  requirements.txt  utils.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: env-checks.yml  publish-slides.yml  stale.yml
asynchronous_lab/: README.md  asynchronous_lab.ipynb  solutions.ipynb
data/: 2007_flights.csv  2019_Yellow_Taxi_Trip_Data.csv  README.md  holidays.csv  tsa_melted_holiday_travel.csv  tsa_passenger_throughput.csv
notebooks/: 0-check_your_env.ipynb  1-getting_started_with_pandas.ipynb  2-data_wrangling.ipynb  3-data_visualization.ipynb  4-hands_on_data_analysis_lab.ipynb  README.md  check_env.py  distance_fare_analysis.ipynb  peak_hours_analysis.ipynb  sir_poy_activity1.ipynb  trip_duration_analysis.ipynb  utils.py  vendor_analysis.ipynb  workbook.ipynb
scripts/: meteriotes_load.py  nasa_data_load.py  taxi.py
slides/: 0-introduction.ipynb  1-getting_started_with_pandas.ipynb  2-data_wrangling.ipynb  3-data_visualization.ipynb  4-hands_on_data_analysis_lab.ipynb  5-outro.ipynb  README.md  generate_slides.sh  utils.py
slides/_template/: README.md  index.html.j2
slides/html/: 0-introduction.slides.html  1-getting_started_with_pandas.slides.html  2-data_wrangling.slides.html  3-data_visualization.slides.html  4-hands_on_data_analysis_lab.slides.html  README.md  combined.slides.html  workshop.slides.html
slides/media/: time_is_up.m4a
slides/templates/: README.md
(+3 files in other folders)
